packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/catchers.stderr
error: expected `,`
 --> $DIR/catchers.rs:4:25
  |
4 |     let _ = catchers![a b];
  |                         ^

error: expected identifier
 --> $DIR/catchers.rs:6:26
  |
6 |     let _ = catchers![a::, ];
  |                          ^

error: unexpected end of input, expected identifier
 --> $DIR/catchers.rs:7:13
  |
7 |     let _ = catchers![a::];
  |             ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `catchers` (in Nightly builds, run with -Z macro-backtrace for more info)
